--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -13,60 +13,62 @@
   }
 }
 
-.banner {
-  clip-path: polygon(
-    100% 0%,
-    0% 0%,
-    0% 89.67%,
-    2% 89.5%,
-    4% 88.99%,
-    6% 88.16%,
-    8% 87.05%,
-    10% 85.68%,
-    12% 84.12%,
-    14% 82.4%,
-    16% 80.61%,
-    18% 78.79%,
-    20% 77.01%,
-    22% 75.34%,
-    24% 73.84%,
-    26% 72.55%,
-    28% 71.53%,
-    30% 70.81%,
-    32% 70.41%,
-    34% 70.35%,
-    36% 70.64%,
-    38% 71.25%,
-    40% 72.18%,
-    42% 73.38%,
-    44% 74.82%,
-    46% 76.44%,
-    48% 78.19%,
-    50% 80%,
-    52% 81.81%,
-    54% 83.56%,
-    56% 85.18%,
-    58% 86.62%,
-    60% 87.82%,
-    62% 88.75%,
-    64% 89.36%,
-    66% 89.65%,
-    68% 89.59%,
-    70% 89.19%,
-    72% 88.47%,
-    74% 87.45%,
-    76% 86.16%,
-    78% 84.66%,
-    80% 82.99%,
-    82% 81.21%,
-    84% 79.39%,
-    86% 77.6%,
-    88% 75.88%,
-    90% 74.32%,
-    92% 72.95%,
-    94% 71.84%,
-    96% 71.01%,
-    98% 70.5%,
-    100% 70.33%
-  );
+@media (min-width: 1024px) {
+  .banner {
+    clip-path: polygon(
+      100% 0%,
+      0% 0%,
+      0% 89.67%,
+      2% 89.5%,
+      4% 88.99%,
+      6% 88.16%,
+      8% 87.05%,
+      10% 85.68%,
+      12% 84.12%,
+      14% 82.4%,
+      16% 80.61%,
+      18% 78.79%,
+      20% 77.01%,
+      22% 75.34%,
+      24% 73.84%,
+      26% 72.55%,
+      28% 71.53%,
+      30% 70.81%,
+      32% 70.41%,
+      34% 70.35%,
+      36% 70.64%,
+      38% 71.25%,
+      40% 72.18%,
+      42% 73.38%,
+      44% 74.82%,
+      46% 76.44%,
+      48% 78.19%,
+      50% 80%,
+      52% 81.81%,
+      54% 83.56%,
+      56% 85.18%,
+      58% 86.62%,
+      60% 87.82%,
+      62% 88.75%,
+      64% 89.36%,
+      66% 89.65%,
+      68% 89.59%,
+      70% 89.19%,
+      72% 88.47%,
+      74% 87.45%,
+      76% 86.16%,
+      78% 84.66%,
+      80% 82.99%,
+      82% 81.21%,
+      84% 79.39%,
+      86% 77.6%,
+      88% 75.88%,
+      90% 74.32%,
+      92% 72.95%,
+      94% 71.84%,
+      96% 71.01%,
+      98% 70.5%,
+      100% 70.33%
+    );
+  }
 }
