--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import "tailwindcss";
 @plugin "daisyui";
 
 @theme {
-  --font-display: "Nunito", sans-serif;
+  --font-roboto: "Nunito", sans-serif;
+  --font-lato: "Lato", sans-serif;
 }
